# omnivoice-tts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: prd.md
src/: chunker.py  converter.py  hardware.py  inference.py  main.py
tests/: sample.txt  test_chunker.py  test_converter.py  test_inference_integration.py
