[project]
name = "tts-book-converter"
version = "0.1.0"
description = "Local CLI tool that converts .txt books into MP3 audiobooks using OmniVoice TTS"
requires-python = ">=3.10"
dependencies = [
    "omnivoice",
    "torch",
    "soundfile",
    "numpy",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
omnivoice = { git = "https://github.com/k2-fsa/OmniVoice.git" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
